src/app/globals.css
@import "../resources/fonts/amazon.css";
@import "@fortawesome/fontawesome-free/css/solid.css";

:root {
  --dark-blue: #152939;
  --blue: #1a364c;
  --gray: #404951;
  --dark-gray: #131a23;
  --text: #2f2f2f;
  --button: #3366ff;
  --orange: #ff9900;
  --links: #0066c0;
  --highlight: #e87825;
  --alexa: #05a2d4;
  --white: #ffffff;
  --font-size: 10pt;

  --scaffold-background: var(--dark-blue);
  --scaffold-foreground: var(--white);

  --main-foreground: var(--text);
  --main-background: var(--white);
}

:root {
  --element-color: var(--main-foreground);
  --highlight-background: var(--orange);
  --highlight-foreground: var(--main-background);
}

:root {
  --background: var(--scaffold-background);
  --foreground: var(--scaffold-foreground);
}

html,
body {
  max-width: 100vw;
  overflow-x: hidden;
  font-size: var(--font-size)
}

body {
  color: var(--foreground);
  background: var(--background);
  font-family: "Amazon Ember", Helvetica, sans-serif;
  font-weight: lighter;
  letter-spacing: -0.01rem;
  line-height: 2rem;
  font-size: 1.3rem;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

p, ul, ol {
  margin-bottom: 1em;
}

a {
  text-decoration: none;
  color: var(--links);
}
a:active, a:hover {
  color: var(--highlight);
}

h1 {
  font-family: "Amazon Ember Display", Helvetica, sans-serif;
  font-weight: lighter;
  font-size: 2rem;
  line-height: 2.8rem;
  padding-bottom: 0.3lh;
  letter-spacing: -0.028rem;
}
h1 {
  font-size: 2.5rem;
}

* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
}

body {
  display: grid;
  grid-template-areas:
    "header"
    "nav"
    "aside"
    "content"
    "footer";
  grid-template-rows: auto auto auto 1fr auto;
  min-height: 100vh;
}

header {
  grid-area: header;
  padding: 0 4em;
}

nav {
  grid-area: nav;
  /*background: var(--blue);*/
  padding: 1em 4em;
  a {
    color: var(--white);
    padding: 1em;

  }
  a:hover, a:active {
    color: var(--white)
  }
}

aside {
  grid-area: aside;
  background: var(--highlight-background);
  color: var(--highlight-foreground);
  padding: 1em;
  text-align: center;
  a{
    color: var(--highlight-foreground);
    text-decoration: underline;
    font-weight: bolder;
  }
  a:hover, a:active {
    color: var(--links);
  }
}

.logo {
  display: flex;
  align-items: center;

  img {
    padding-right: 2em;
  }

  padding-right: 4em;
  color: inherit;
}

main {
  background-color: var(--main-background);
  color: var(--main-foreground);
  grid-area: content;
}

.frame {
  max-width: 1200px;
  margin: 0 auto;
  padding: 2em 4em;

  h1, h2 {
    font-family: "Amazon Ember", Helvetica, sans-serif;
    font-weight: normal;
    font-size: 3rem;
    line-height: 4.2rem;
    margin-top: 0.25em;
    margin-bottom: 0.5em;
  }
  h2 {
    font-size: 2rem;
    line-height: 2.8rem;
  }
  p, li {
    font-family: "Amazon Ember", Helvetica, sans-serif;
    font-weight: normal;
    line-height: 2rem;
  }
  li {
    margin-left: 1em;
  }
}

.hint {
  max-width: 1200px;
  margin: 0 auto;
  padding: 1em;
}

